--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,15 @@
     <string name="mind_master_logo">Mind \nMaster</string>
     <string name="or">or</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <!-- Forms -->
     <string name="welcome">Welcome!</string>
     <string name="log_in">Log In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="calendar">Calendar</string>
+    <string name="diary">Diary</string>
+    <string name="expenses">Expenses Manager</string>
+    <string name="passwords">Passwords Manager</string>
+
+    <!-- Forms -->
     <string name="hint_name">Name<font fgcolor='#C80000'>*</font></string>
     <string name="hint_surname">Surname</string>
     <string name="hint_email">Email</string>
@@ -22,6 +27,9 @@
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
+    <string name="join_now">Join now!</string>
+
+    <!-- Calendar and Diary -->
 
 
 </resources>
