creada la pantalla help y settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,20 +14,22 @@
     <string name="settings">Settings</string>
     <string name="management_settings">Management Settings</string>
     <string name="account">Account</string>
-    <string name="help_faqs">Help &amp; FAQs</string>
+    <string name="help_faqs">FAQs &amp; Support</string>
+    <string name="share_with_friends">Share with friends</string>
+    <string name="rate_app">Rate app</string>
 
     <!-- Forms -->
-    <string name="hint_name">Name<font fgcolor='#C80000'>*</font></string>
-    <string name="hint_surname">Surname</string>
+    <string name="hint_first_name">First name<font fgcolor='#C80000'>*</font></string>
+    <string name="hint_last_name">Last name</string>
     <string name="hint_email">Email</string>
-    <string name="hint_email_">Email<font fgcolor='#C80000'>*</font></string>
+    <string name="hint_email_red">Email<font fgcolor='#C80000'>*</font></string>
     <string name="hint_phone">Phone<font fgcolor='#C80000'>*</font></string>
     <string name="hint_dateBirthdate">Birthdate<font fgcolor='#C80000'>*</font></string>
     <string name="hint_password">Password</string>
-    <string name="hint_password_">Password<font fgcolor='#C80000'>*</font></string>
+    <string name="hint_password_red">Password<font fgcolor='#C80000'>*</font></string>
     <string name="hint_search">Search here …</string>
     <string name="hint_repeatPassword">Repeat password<font fgcolor='#C80000'>*</font></string>
-    <string name="terms_conditions">I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</string>
+    <string name="check_terms_and_conditions">I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</string>
     <string name="forgotten_password">Forgotten password?</string>
     <string name="have_an_account">Have an account?</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
@@ -68,4 +70,39 @@
     <string name="username_copied">Username copied</string>
     <string name="email_copied">Email copied</string>
     <string name="password_copied">Password copied</string>
+
+
+    <string name="notifications">Notifications</string>
+    <string name="language">Language</string>
+    <string name="theme">Theme</string>
+    <string name="security">Security</string>
+    <string name="currency">Currency</string>
+    <string name="change_password">Change password</string>
+    <string name="log_out">Log out</string>
+    <string name="cancel">Cancel</string>
+    <string name="logout_confirmation_message">Do you want to log out?</string>
+    <string name="descripting_message_for_help">Didn\'t find the answer you were looking for? \nContact our support center!</string>
+    <string name="need_help">Need help?</string>
+    <string name="go_to_our_website">Go to our website</string>
+    <string name="terms_and_conditions">Terms and Conditions</string>
+    <string name="email_us">Email Us</string>
+    <string name="find_question">Find question...</string>
+
+    <string-array name="available_languages">
+        <item>English</item>
+        <item>Spanish</item>
+        <item>French</item>
+    </string-array>
+
+    <string-array name="available_themes">
+        <item>Light</item>
+        <item>Dark</item>
+        <item>System</item>
+    </string-array>
+
+    <string-array name="available_currencies">
+        <item>Euro - €</item>
+        <item>Dollar - $</item>
+        <item>Pound - £</item>
+    </string-array>
 </resources>
