Migración de Encripter a AES Encripter lo que modifica la forma de encriptar y desencriptar las cosas.
Antes se utilizaba el algoritmo AES/ECB y ahora se utiliza AES/GCM con la creacion de una frase segura para el usuario que genera posteriormente la SecretKey

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,8 @@
     <string name="password_medium">Password is medium</string>
     <string name="password_strong">Password is strong</string>
     <string name="minAgeError">You must be at least %d years old to register.</string>
+    <string name="wordCount4PasswordPhrase">20</string>
+    <string name="hash_algorithm">SHA-256</string>
 
     <string-array name="available_languages">
         <item>English</item>
