--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
     <string name="app_name">Mind Master</string>
     <string name="mind_master_logo">Mind \nMaster</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -175,6 +175,8 @@
     <string name="clear">Clear</string>
     <string name="unknown_file_name">Unknown name</string>
     <string name="change_account">Change account</string>
+    <string name="verify_email" >Verify your email</string>
+    <string name="verify_email_message" >We have sent you an email to your email address, don\'t forget to check your <b>spam folder.</b></string>
 
     <string-array name="available_languages">
         <item>English</item>
