--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,7 @@
     <string name="change_account">Change account</string>
     <string name="verify_email" >Verify your email</string>
     <string name="verify_email_message" >We have sent you an email to your email address, don\'t forget to check your <b>spam folder.</b></string>
+    <string name="tap_again_to_exit">Tap again to exit.</string>
 
     <string-array name="available_languages">
         <item>English</item>
